debut projet responsive

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class=" cols-lg-4 card">
           <img src="Photo stand ATDA 1.jpeg" class="card-img-top" alt="..." style="width: 86%;">
-          <h3>DIGITAL MARKETING</h3>
+          <h3>DIGITALf MARKETING</h3>
             
             <p style="align-items: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Les 250 jeunes apprenants retenus après une phase de sélection seront formés aux métiers du développement web et applications mobiles, de l’électronique embarqué et IOT mais aussi de l’infonuagique (cloud computing).
              </p>
