section nos dirigeant non achever

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     l’interface utilisateur et de la création numérique, <br> notamment la conception et le développement. </p>
 <br>
 <ul>
-<li><i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i>  une formation a ne pas manque</li><br>
-<li> <i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i> une formation eficaste</li><br>
+<li><i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i>  une formation a ne pas manque</li>
+<li> <i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i> une formation eficaste</li>
 <li> <i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i> une formation que reduit le taux de chomage</li>
 </ul>
 <br>
