responsive break point 300

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
           </nav>
       
           <div class="na2">
-            <small>PROGRAMME</small>
+            <h3>PROGRAMME</h3>
             <h2>D-CLIC, formez-vous au numérique</h2>
           </div>
       
