--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
         <h3 class="six">C</h3>
 
       </div>
+      
+      <div class="toggle " style="padding-right: 30px
+      ;">
+        <i class="fa-solid fa-bars ouvrir"></i>
+        <i class="fa-sharp fa-solid fa-xmark fermer"></i>
+      </div>
 
-      <ul>
+      <ul class="onglets">
         <li><a href="index.html">Home</a></li>
         <li><a href="service1.html">Service</a></li>
         <li><a href="design.html">Design</a></li>
@@ -69,13 +75,13 @@
   </nav>
 
   <div class="na2">
-    <small>PROGRAMME</small>
+    <h3>PROGRAMME</h3>
     <h2>D-CLIC, formez-vous au numérique</h2>
   </div>
 
   <div class="na3">
-    <a class="job1" href="">fin a job</a>
-    <a class="job2" href="">fin a candidate</a>
+    <div class="aj"><a class="job1" href="">fin a job</a></div>
+    <div class="aj"><a class="job2" href="">fin a candidate</a></div>
   </div>
 
   <div class="na4">
@@ -141,21 +147,52 @@
 
 
 </div>
-
-
-
-
-
-
-
-
 </div>
 
+<div class="divv">
+<div class="div">
+
+  <div class="j">
+    <h1>former les jeunes (18-35 ans) <br> aux métiers du numérique</h1><br>
+  
+    <p>A travers des opérateurs de formation reconnus et habilités <br> à délivrer des certifications, des
+      formations brèves, de 4 à 9 mois, <br> sont dispensées à des cohortes des jeunes francophones qui seront <br> ensuite
+      accompagnés dans leur insertion professionnelle. Pour la <br> phase pilote, centrée sur 14 pays (Burkina Faso,
+      Congo RD, Côte d’Ivoire, <br> Djibouti, Gabon, Haïti, Madagascar, Mali,Mauritanie, Niger, Sénégal, Tchad, <br> Togo
+      et Tunisie), les filières retenues concernent les familles de métiers de la <br> communication, du marketing, de
+      l’interface utilisateur et de la création numérique, <br> notamment la conception et le développement. </p>
+  <br>
+  <ul>
+  <li><i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i>  une formation a ne pas manque</li>
+  <li> <i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i> une formation eficaste</li>
+  <li> <i class="fa-solid fa-check" style="color: #fdd41f; font-size: 25px;"></i> une formation que reduit le taux de chomage</li>
+  </ul>
+  <br>
+  <button>Press</button>
+  
+  
+  
+  </div>
 
 
 
+  <div class="fottt">
+  
+  <div>
+    <img  src="DCLIC PRo 3.jpg" alt="" style="border-top-left-radius: 15px;">
+    <img  src="Une.jpg" style="border-top-right-radius: 15px;">
+  </div>
+  
+  <div>
+    <img src="DCLIC Mada.jpg" alt="" style="border-bottom-left-radius: 15px;">
+    <img src="Sans titre 6_0.jpg" style="border-bottom-right-radius: 15px;">
+  </div>
+  
+  </div>
+  
+  </div>
 
-
+</div>
 
 </section>
 
