--- a/design.html
+++ b/design.html
@@ -46,7 +46,7 @@
           </nav>
       
           <div class="na2">
-            <small>PROGRAMME</small>
+            <h3>PROGRAMME</h3>
             <h2>D-CLIC, formez-vous au numérique</h2>
           </div>
       
