home page corriger

--- a/index.html
+++ b/index.html
@@ -75,13 +75,17 @@
   </nav>
 
   <div class="na2">
-    <h3>PROGRAMME</h3>
+    <h5>PROGRAMME</h5>
     <h2>D-CLIC, formez-vous au numérique</h2>
   </div>
 
   <div class="na3">
-    <div class="aj"><a class="job1" href="">fin a job</a></div>
-    <div class="aj"><a class="job2" href="">fin a candidate</a></div>
+    <div class="">
+    <a class="job1" href="">fin a job</a>
+    </div>
+    <div class="aj">
+    <a class="job2" href="">fin a candidate</a>
+    </div>
   </div>
 
   <div class="na4">
