responsive break point 1000px

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
   </div>
 
   <div class="na3">
-    <div class="">
-    <a class="job1" href="">fin a job</a>
+    <div class="ja">
+    <a class="job1" href="">Touvez un job</a>
     </div>
     <div class="aj">
-    <a class="job2" href="">fin a candidate</a>
+    <a class="job2" href=""> Candidat  (e) </a>
     </div>
   </div>
 
@@ -119,12 +119,12 @@
 
 <div>
   <img  src="DCLIC PRo 3.jpg" alt="" style="border-top-left-radius: 15px;">
-  <img  src="Une.jpg" style="border-top-right-radius: 15px;">
+  <img class="disp"  src="Une.jpg" style="border-top-right-radius: 15px;">
 </div>
 
 <div>
-  <img src="DCLIC Mada.jpg" alt="" style="border-bottom-left-radius: 15px;">
-  <img src="Sans titre 6_0.jpg" style="border-bottom-right-radius: 15px;">
+  <img  class="disp" src="DCLIC Mada.jpg" alt="" style="border-bottom-left-radius: 15px;">
+  <img  class="disp" src="Sans titre 6_0.jpg" style="border-bottom-right-radius: 15px;">
 </div>
 
 </div>
@@ -152,7 +152,7 @@
 
 </div>
 </div>
-
+<br><br>
 <div class="divv">
 <div class="div">
 
@@ -177,19 +177,19 @@
   
   
   </div>
-
+<br><br>
 
 
   <div class="fottt">
   
   <div>
     <img  src="DCLIC PRo 3.jpg" alt="" style="border-top-left-radius: 15px;">
-    <img  src="Une.jpg" style="border-top-right-radius: 15px;">
+    <img  class="disp"  src="Une.jpg" style="border-top-right-radius: 15px;">
   </div>
   
   <div>
-    <img src="DCLIC Mada.jpg" alt="" style="border-bottom-left-radius: 15px;">
-    <img src="Sans titre 6_0.jpg" style="border-bottom-right-radius: 15px;">
+    <img  class="disp" src="DCLIC Mada.jpg" alt="" style="border-bottom-left-radius: 15px;">
+    <img  class="disp" src="Sans titre 6_0.jpg" style="border-bottom-right-radius: 15px;">
   </div>
   
   </div>
@@ -253,33 +253,33 @@
     <div class="card-group" style="display: flex;">
       <div class="row" style="display: flex; margin: 40px; padding: -20px;">
         <div class=" cols-lg-4 card">
-          <img src="IMG-20230522-WA0041.jpg" class="card-img-top one" alt="..." style="width: 78%;">
+          <img src="IMG-20230522-WA0041.jpg" class="card-img-top one" alt="..." style="width: 78%;"><br>
           <h4>DEVELOPPEMENT WEB & APPLICATION MOBILE</h4>
 
 
           <p style="align-items: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Les
             250 jeunes apprenants retenus après une phase de sélection seront formés aux métiers du développement web et
             applications mobiles, de l’électronique embarqué et IOT mais aussi de l’infonuagique (cloud computing)..
-          </p>
+          </p><br>
 
         </div>
         <div class=" cols-lg-4 card">
-          <img src="DCLIC Mada.jpg" class="card-img-top" alt="..." style="width: 85%;">
+          <img src="DCLIC Mada.jpg" class="card-img-top" alt="..." style="width: 85%;"><br>
           <h3>CLOUD COMPUTING </h3>
           <p style="align-items: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Les
             250 jeunes apprenants retenus après une phase de sélection seront formés aux métiers du développement web et
             applications mobiles, de l’électronique embarqué et IOT mais aussi de l’infonuagique (cloud computing).
-          </p>
+          </p><br>
 
         </div>
         <div class=" cols-lg-4 card">
-          <img src="Photo stand ATDA 1.jpeg" class="card-img-top" alt="..." style="width: 86%;">
+          <img src="Photo stand ATDA 1.jpeg" class="card-img-top" alt="..." style="width: 86%;"><br>
           <h3>DIGITAL MARKETING</h3>
 
           <p style="align-items: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Les
             250 jeunes apprenants retenus après une phase de sélection seront formés aux métiers du développement web et
             applications mobiles, de l’électronique embarqué et IOT mais aussi de l’infonuagique (cloud computing).
-          </p>
+          </p><br>
 
 
         </div>
@@ -314,7 +314,7 @@
 
       <p>À l'occasion de la Journée <br>
         internationale des jeunes <br>
-        filles</p>
+        filles</p><br>
 
     </div>
     <div class=" cols-lg-4 card">
@@ -324,7 +324,7 @@
 
       <p>À l'occasion de la Journée <br>
         internationale des jeunes filles <br>
-      </p>
+      </p><br>
 
     </div>
     <div class=" cols-lg-4 card">
@@ -333,7 +333,7 @@
         Madagascar</h3>
       <p>À l'occasion de la Journée <br>
         internationale des jeunes <br>
-        filles</p>
+        filles</p><br>
 
 
     </div>
@@ -352,17 +352,18 @@
   <a href="" class="hero-btn">Joindre son Cv</a>
 </section>
 
+<div class="farr">
 
-
-<p style="text-align: center;  font-size: 50px;">Les projets phares de l'OIF : DCLIC</p><br>
-<h1 style="text-align: center; color: darkcyan ;">D-CLIC: former au numeriques les talens féminins de demain</h1><br>
+<p>Les projets phares de l'OIF : DCLIC</p><br>
+<h1>D-CLIC: former au numeriques les talens féminins de demain</h1><br>
 
 <h3 style="text-align: center;"> <br>
 </h3>
+</div>
 
 <section>
   <section class="photo">
-    <h1 style="color: deepskyblue; font-size: 40px;"> RESSOURCES LIÉES</h1><br>
+    <h1> RESSOURCES LIÉES</h1><br>
     <div class="actualite">
       <h4>À l'occasion de la Journée internationale des jeunes filles dans les <br>
         technologies de l’information et de la communication (TIC), <br>
@@ -534,7 +535,7 @@
   
   
   
-  <section>
+  <section class="carou">
     <h3 class="h3">Quelques temoignages de nos apprenants</h3><br><br>
    <div class="tem"> 
     <div class="container">
@@ -583,8 +584,8 @@
       <div class="img-footer">
         <img src="logo-franco.png" alt="">
         <p>SUIVEZ-NOUS-SUR</p>
-        <a href="#"><i class="ri-facebook-fill"></i></a>
-        <a href="#"><i class="ri-instagram-fill"></i></a>
+        <a href="#"><i class="ri-facebook-fill res"></i></a>
+        <a href="#"><i class="ri-instagram-fill "></i></a>
         <a href="#"><i class="ri-youtube-fill"></i></a>
         <i class="ri-github-fill"></i>
       </div>
