logo auf ok, filtre ok; page djob ok, candidat ok

--- a/index.html
+++ b/index.html
@@ -37,16 +37,9 @@
 
   <nav>
     <div class="nav1">
-      <div class="logo-box">
-        <h3 class="une">D</h3>
-        <h3 class="deux">-</h3>
-        <h3 class="trois">C</h3>
-        <h3 class="quatre">L</h3>
-        <h3 class="cinq">I</h3>
-        <h3 class="six">C</h3>
-
+      <div>
+      <img class="fran" src="logo-franco.png" alt="">
       </div>
-      
       <div class="toggle " style="padding-right: 30px
       ;">
         <i class="fa-solid fa-bars ouvrir"></i>
@@ -60,7 +53,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a class="job" href="candidat.html">Candidat(e)</a></li>
         <li><a class="wan" href="">Want a Job</a></li>
-        <form>
+        <!-- <form>
           <select class="form-select sec1" aria-label="Default select example">
             <option value="1">English</option>
             <option value="2">Français</option>
@@ -69,26 +62,39 @@
             <option value="5">Portugais</option>
           </select>
           <i class="fa-solid fa-magnifying-glass fa1"></i>
-        </form>
+        </form> -->
+        
       </ul>
+      <div class="offf">
+        <img class="auff" src="AUF.png" alt="">
+        </div>
     </div>
   </nav>
 
   <div class="na2">
     <h5>PROGRAMME</h5>
-    <h2>D-CLIC, formez-vous au numérique</h2>
+    <div class="logo-box">
+      <h3 class="une">D</h3>
+      <h3 class="deux">-</h3>
+      <h3 class="trois">C</h3>
+      <h3 class="quatre">L</h3>
+      <h3 class="cinq">I</h3>
+      <h3 class="six">C</h3>
+    </div>
+    <p>à Bobo-Dioulasso</p>
+    <h2>Formez-vous au numérique</h2>
   </div>
 
   <div class="na3">
     <div class="ja">
-    <a class="job1" href="">Touvez un job</a>
+    <a class="job1" href="trouvez un djob.html">Touvez un job</a>
     </div>
     <div class="aj">
-    <a class="job2" href=""> Candidat  (e) </a>
+    <a class="job2" href="trouver un canditat.html">Trouver un candidat </a>
     </div>
   </div>
 
-  <div class="na4">
+  <!-- <div class="na4">
 
     <input type="text" placeholder="eg.adam Scott" />
 
@@ -101,7 +107,7 @@
     <input type="text" placeholder="Localisation" />
     <button class="sea">Search</button>
 
-  </div>
+  </div> -->
 </header><br><br>
 
 
